# shmoptix

./: AST.h  CMakeLists.txt  CodeGen.h  Color.h  ErrorHandler.h  ExecutionEnvironment.h  Lexer.h  Makefile  Parser.h  README.md  Type.h  global.h  matte.sl  shmoptix.cc  show.cc
scratchpad/: .gitignore  Makefile  bla.c  bla.cc  matte.ll  testMatte.c
tests/: Makefile  test.1.sl
